[REMOVE] All specific implementation and migrate to SB 4.0.0 JAVA 25