@@ -5,9 +5,10 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.5</version>
+        <version>4.0.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
+
     <groupId>be.aidji</groupId>
     <artifactId>flexi-gate</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -24,13 +25,21 @@
     </developers>
 
     <properties>
-        <java.version>21</java.version>
-        <mvn-surefire.version>3.2.5</mvn-surefire.version>
+        <!-- Java 25 -->
+        <java.version>25</java.version>
+
+        <!-- Mvn -->
+        <maven.compiler.release>25</maven.compiler.release>
+        <jacoco.version>0.8.14</jacoco.version>
+        <mvn-surefire.version>3.5.2</mvn-surefire.version>
+
+        <!-- JJWT -->
         <jjwt.version>0.11.5</jjwt.version>
         <micrometer.version>1.15.3</micrometer.version>
         <spring-cloud.version>4.3.0</spring-cloud.version>
         <mockito.version>5.2.0</mockito.version>
     </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -104,20 +113,18 @@
             <scope>test</scope>
         </dependency>
 
-
-        <!-- DIVERS -->
-
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
     </dependencies>
 
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.14.0</version>
+                <configuration>
+                    <release>${java.version}</release>
+                    <parameters>true</parameters>
+                </configuration>
             </plugin>
 
             <plugin>
@@ -125,8 +132,72 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${mvn-surefire.version}</version>
                 <configuration>
-                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                    <argLine>
+                        -XX:+EnableDynamicAgentLoading
+                        --add-opens java.base/java.lang=ALL-UNNAMED
+                        --add-opens java.base/java.util=ALL-UNNAMED
+                        -Djansi.passthrough=false
+                        -Djansi.force=false
+                        -Dstyle.color=never
+                    </argLine>
                 </configuration>
+            </plugin>
+
+            <!-- Versioning plugin-->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <version>2.18.0</version>
+            </plugin>
+
+            <!-- JaCoCo Coverage plugin-->
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${jacoco.version}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report-aggregate</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>report-aggregate</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>jacoco-check</id>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                        <configuration>
+                            <rules>
+                                <rule>
+                                    <element>BUNDLE</element>
+                                    <limits>
+                                        <limit>
+                                            <counter>LINE</counter>
+                                            <value>COVEREDRATIO</value>
+                                            <minimum>0.80</minimum>
+                                        </limit>
+                                    </limits>
+                                </rule>
+                            </rules>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
